tests/paczka1/small_fuzzy/87326196.err
Error in line 6: xaHF2 S836 48,0
Error in line 14: ED751FqyBs S836 56,7
